--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17889,6 +17889,7 @@ body {
 .theme-btn-1 {
   background-color: var(--ltn__secondary-color);
   color: var(--white);
+  border-radius: 15px;;
 }
 .theme-btn-1:hover {
   background-color: var(--ltn__primary-color);
