--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6486,6 +6486,10 @@ label{
   color: var(--white);
 }
 
+.menu-color-white .ltn__main-menu > ul > li > a:hover {
+  color: red !important;
+}
+
 /* ----------------------------------------
   Header 5
 ---------------------------------------- */
@@ -11184,6 +11188,7 @@ label{
 .ltn__category-item-5 a span {
   display: block;
 }
+
 .ltn__category-item-5 a .category-icon {
   width: 100px;
   height: 100px;
