--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -179,7 +179,7 @@ body{
   padding-left: 0;
 }
 .carousel__wrap {
-  margin-top: 10%;
+  margin-top: 5%;
   align-items: center;
   display: flex;
   flex: 1;
@@ -279,10 +279,11 @@ body{
   border: 0;
   cursor: pointer;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  object-fit: contain;
 }
 .carousel__btn--prev {
   left: -10rem;
@@ -294,16 +295,18 @@ body{
 .carousel__btn-arrow {
   border: solid black;
   border-width: 0 0.4rem 0.4rem 0;
-  height: 6rem;
+  height: 30px;
   padding: 3px;
-  width: 6rem;
+  width: 30px;
   z-index: 10;
 }
 .carousel__btn-arrow--left {
   transform: rotate(135deg);
+  margin-left: 30px;
 }
 .carousel__btn-arrow--right {
   transform: rotate(-45deg);
+  margin-right: 30px;
 }
 
 .carousel__dots {
