--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -257,7 +257,29 @@ body{
 .carousel__slide-item-img-link:hover img {
   transform: scale(1.3);
 }
+.carousel .slider-wrapper {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
 
+.carousel .slider {
+  display: flex !important;
+}
+
+.carousel .slide {
+  flex: 0 0 auto !important;
+  width: 100% !important;
+  transition: transform 0.5s;
+}
+
+.carousel .legend {
+  color: #fff;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 10px;
+  text-align: center;
+  font-size: 1.2rem;
+}
 .carousel-slide-item__body {
   bottom: -2.5rem;
   height: 10%;
