off-plan icons added

--- a/public/assets/css/font-icons.css
+++ b/public/assets/css/font-icons.css
@@ -285,7 +285,7 @@ i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
     content: "\f150";
 }
 .flaticon-select:before {
-    content: "\f151";
+    content: "\f03d";
 }
 .flaticon-sewing:before {
     content: "\f152";
