--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -661,6 +661,7 @@ a:active {
   text-decoration: none;
   outline: none;
   color: inherit;
+  font-weight: 600;
 }
 
 a:hover {
@@ -5545,7 +5546,7 @@ label{
 
 .ltn__main-menu > ul > li > a {
   font-size: 18px;
-  padding: 20px 10px;
+  padding: 20px 15px;
   display: inline-block;
   white-space: nowrap;
   color: var(--ltn__heading-color);
