--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -196,6 +196,13 @@ body{
   width: calc(90rem);
 }
 
+
+.sticky44 {
+  position: fixed;
+  top: 0;
+  /* Add your sticky sidebar styles here */
+}
+
 .carousel__container {
   height: 100%;
   overflow: hidden;
@@ -4362,8 +4369,8 @@ ul.wp-block-latest-posts.is-grid.alignwide {
     Widgets
 -------------------------------------------------------------- */
 .widget {
-  margin-bottom: 40px;
-  padding: 35px 30px 40px 35px;
+  margin-bottom: 20px;
+  padding: 20px 30px 0px 35px;
   border: 2px solid var(--border-color-11);
 }
 .widget:last-child {
@@ -11056,7 +11063,7 @@ label{
 }
 
 .sticky-sidebarDEtails{
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 360px;
   height: 100%;
