--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18224,7 +18224,7 @@ body {
   border-radius: 10px;
   display: inline-block;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 600;
   font-family: var(--ltn__heading-font);
   padding: 10px 10px;
   text-align: center;
@@ -18378,10 +18378,14 @@ body {
 }
 
 .btn-effect-1:hover {
-  color: var(--ltn__heading-color);
+ color: white;
+ border-radius: 15px;
 }
 .btn-effect-1:hover::after {
   width: 100%;
+  background-color: #000000;
+  border-radius: 15px;
+
 }
 
 .btn-effect-2:after {
