--- a/public/assets/css/font-icons.css
+++ b/public/assets/css/font-icons.css
@@ -352,6 +352,7 @@ i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+  font-size: 14px;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
