--- a/public/assets/css/font-icons.css
+++ b/public/assets/css/font-icons.css
@@ -358,6 +358,38 @@ i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  font-size: 14px;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+[class^="icon1-"], [class*=" icon1-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  font-size: 25px;
+  font-weight: 900;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 .icon-cancel:before {
   content: "\e900";
@@ -391,6 +423,9 @@ i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
 }
 .icon-youtube:before {
   content: "\e90a";
+}
+.icon1-mail:before {
+  content: "\e90b";
 }
 .icon-mail:before {
   content: "\e90b";
