all images change but not approved

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18868,6 +18868,10 @@ body {
     margin-top: 1rem;
   }
 }
+.textbold{
+  font-weight: bold;
+  padding-left: 5px;
+}
 
 /* ----------------------------------------------------
     END
