--- a/public/assets/css/plugins.css
+++ b/public/assets/css/plugins.css
@@ -321,6 +321,8 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  border: 2px solid ;
+  border-radius: 8px ;
 }
 button,
 select {
