--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6889,7 +6889,7 @@ i {
 .ltn__utilize.ltn__utilize-mobile-menu {
   right: auto;
   left: 0;
-  padding: 50px 40px;
+  padding: 50px 0px 50px 30px;
   -webkit-transform: translateX(-100%);
   -ms-transform: translateX(-100%);
   transform: translateX(-100%);
@@ -6938,7 +6938,7 @@ i {
     width: 300px;
   }
   .ltn__utilize.ltn__utilize-mobile-menu {
-    padding: 50px 20px;
+    padding: 50px 0px 50px 10px; 
   }
 }
 
@@ -18881,7 +18881,11 @@ body {
 .textsizingsmall{
   font-size: 20px !important;
 }
-
+.showItem{
+  position: absolute;
+  top:10px;
+  right: 0.5rem;
+}
 
 /* ----------------------------------------------------
     END
