--- a/public/assets/css/plugins.css
+++ b/public/assets/css/plugins.css
@@ -6375,6 +6375,7 @@ fieldset:disabled .btn {
 }
 .align-self-center {
   align-self: center !important;
+  margin: auto;
 }
 .align-self-baseline {
   align-self: baseline !important;
