--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11806,6 +11806,7 @@ input::placeholder {
 .ltn__feature-item-6 .ltn__feature-info p {
   font-size: 14px;
   margin-bottom: 0;
+  min-height: 101px;
 }
 .ltn__feature-item-6 .ltn__feature-info p + p {
   margin-top: 15px;
@@ -13173,12 +13174,11 @@ blockquote::before {
 .ltn__testimonial-item-3 .ltn__testimoni-info {
   -webkit-box-shadow: var(--ltn__box-shadow-4);
   box-shadow: var(--ltn__box-shadow-4);
-  width: calc(100% - 40px);
-  margin: -60px auto 0;
   background-color: var(--white);
   padding: 25px 30px 30px;
   position: relative;
   z-index: 9;
+  text-align: center;
 }
 .ltn__testimonial-item-3 .ltn__testimoni-info p {
   margin-top: 0;
@@ -13191,6 +13191,7 @@ blockquote::before {
   margin-bottom: 5px;
   margin-top: 0;
   color: var(--ltn__secondary-color);
+  min-height: 63px;
 }
 .ltn__testimonial-item-3 .ltn__testimoni-info-inner {
   display: -webkit-box;
