--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -586,7 +586,7 @@ body {
   color: var(--ltn__paragraph-color);
   font-weight: 400;
   font-style: normal;
-  font-size: 16px;
+  font-size: 13px;
   font-family: var(--ltn__body-font);
   line-height: 1.8;
   margin: 0 auto;
@@ -4220,12 +4220,12 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 /* ----------------------------------------------------
     Breadcurmb Area
 ---------------------------------------------------- */
-.ltn__breadcrumb-area {
+/* .ltn__breadcrumb-area {
   background-color: var(--section-bg-1);
   margin-bottom: 120px;
   padding-top: 5px;
   padding-bottom: 5px;
-}
+} */
 
 .ltn__breadcrumb-list ul {
   margin: 0;
@@ -6080,9 +6080,9 @@ label{
 .ltn__header-options-2 .mobile-menu-toggle > a {
   width: 50px;
   height: 50px;
-  background: var(--white);
-  -webkit-box-shadow: var(--ltn__box-shadow-1);
-  box-shadow: var(--ltn__box-shadow-1);
+  /* background: var(--white); */
+  /* -webkit-box-shadow: var(--ltn__box-shadow-1);
+  box-shadow: var(--ltn__box-shadow-1); */
 }
 
 /* ltn__drop-menu */
@@ -7071,8 +7071,8 @@ i {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 50px;
-  height: 60px;
+  width: 80px;
+  height: 70px;
   margin-top: -2px;
   margin-left: -2px;
   cursor: pointer;
@@ -14639,7 +14639,7 @@ input.cart-plus-minus-box {
 
 .ltn__img-slide-item-4 {
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 .ltn__img-slide-item-4 .ltn__img-slide-info {
   display: -webkit-box;
