--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11820,7 +11820,6 @@ input::placeholder {
   -webkit-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
-  color: var(--ltn__color-1);
   font-weight: 700;
   font-size: 14px;
   display: -webkit-box;
@@ -11829,7 +11828,7 @@ input::placeholder {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  margin-top: 25px;
+  min-height: 76px;
 }
 .ltn__feature-item-6 .ltn__feature-info .ltn__service-btn i {
   display: -webkit-box;
@@ -13382,7 +13381,7 @@ blockquote::before {
 /* testimonial-item-7 */
 .ltn__testimonial-item-7 {
   background-color: var(--white);
-  padding: 30px 35px 40px;
+  padding: 30px 35px 0px;
   max-width: 100%;
   border-radius: 10px;
   -webkit-box-shadow: var(--ltn__box-shadow-4);
@@ -13396,6 +13395,7 @@ blockquote::before {
 }
 .ltn__testimonial-item-7 .ltn__testimoni-info p {
   font-size: 18px;
+  min-height: 292px;
 }
 .ltn__testimonial-item-7 .ltn__testimoni-info p i {
   font-size: 30px;
@@ -13679,6 +13679,7 @@ blockquote::before {
 
 .team-info {
   padding: 25px 15px;
+  min-height: 159px;
 }
 
 /* team-item-2 */
@@ -18907,19 +18908,10 @@ body {
   font-size: 17px!important;
   padding-left: 10px !important;
 }
-.positioning1{
-  display: flex;
-  justify-content: space-between;
+.reddcoloringg{
+  color :#eb2027;
+  font-weight: 800;
 }
-.textsizingsmall{
-  font-size: 20px !important;
-}
-.showItem{
-  position: absolute;
-  top:10px;
-  right: 0.5rem;
-}
-
 /* ----------------------------------------------------
     END
 ---------------------------------------------------- */
