--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10186,6 +10186,11 @@ input::placeholder {
   font-size: 19px;
   color: var(--ltn__secondary-color)!important;
 }
+.bigcoloring1{
+  font-weight: 500 !important;
+  font-size: 25px;
+  /* color: var(--ltn__secondary-color)!important; */
+}
 
 .property-detail-info-list ul li span {
   font-weight: 600;
@@ -18694,6 +18699,14 @@ body {
   justify-content: center;
   align-items: center;
   padding: 0px 20px 10px 20px;
+
+}
+.wcallflexx2{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding: 10px 20px 10px 20px;
 
 }
 .wcallFlex ul{
