--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18912,6 +18912,10 @@ body {
   color :#eb2027;
   font-weight: 800;
 }
+.whitecoloringbg{
+  background-color: white !important;
+ padding: 20px 32px;
+}
 /* ----------------------------------------------------
     END
 ---------------------------------------------------- */
