--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8608,7 +8608,7 @@ i {
     min-height: 800px;
   }
   .ltn__slide-item-3-normal {
-    min-height: 780px;
+    min-height: 832px;
   }
   .ltn__slide-item-6 {
     height: 800px;
@@ -10882,7 +10882,7 @@ input::placeholder {
 .bg-image-top {
   background-size: auto;
   background-position: top center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
 }
 
 .bg-image-right-before {
@@ -11829,6 +11829,34 @@ input::placeholder {
   -ms-flex-pack: center;
   justify-content: center;
   min-height: 76px;
+}
+.ltn__feature-item-6 .ltn__feature-info .ltn__service-btnn {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  font-weight: 700;
+  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  min-height: 152px;
+}
+.ltn__feature-item-6 .ltn__feature-info .ltn__service-btnn1 {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  font-weight: 700;
+  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  min-height: 227px;
 }
 .ltn__feature-item-6 .ltn__feature-info .ltn__service-btn i {
   display: -webkit-box;
@@ -13396,6 +13424,14 @@ blockquote::before {
 .ltn__testimonial-item-7 .ltn__testimoni-info p {
   font-size: 18px;
   min-height: 292px;
+}
+.ltn__testimonial-item-7 .ltn__testimoni-info .fixingsizing {
+  font-size: 18px;
+  min-height: 423px;
+}
+.ltn__testimonial-item-7 .ltn__testimoni-info .fixingsizing111 {
+  font-size: 18px;
+  min-height: 310px;
 }
 .ltn__testimonial-item-7 .ltn__testimoni-info p i {
   font-size: 30px;
