--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18997,6 +18997,11 @@ body {
 .sizingofp{
   min-height: 86px;
 }
+a.ltn__utilize-toggle.close {
+
+   display: none;
+  
+  }
 /* ----------------------------------------------------
     END
 ---------------------------------------------------- */
