--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19014,3 +19014,9 @@ a.ltn__utilize-toggle.close {
 ---------------------------------------------------- */
 
 /*# sourceMappingURL=style.css.map */
+.title_div{
+  width: 70%;
+}
+.price_div{
+  width: 30%;
+}
