--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10204,7 +10204,7 @@ input::placeholder {
 .property-detail-info-list ul li label {
   margin-right: 5px;
   font-weight: 600;
-  min-width: 160px;
+  min-width: 60px;
   display: inline-block;
 }
 .bigcoloring{
@@ -19043,4 +19043,12 @@ a.ltn__utilize-toggle.close {
 }
 .carouselImages{
   min-height: 300px;
+}
+.sizingimage{
+  width: 9%;
+}
+@media only screen and (max-width: 992px){
+  .sizingimage{
+    width: 5% !important;
+  }
 }
