--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19093,5 +19093,7 @@ a.ltn__utilize-toggle.close {
   font-weight: 600;
   font-family: "League Spartan";
  cursor: pointer;
+ padding-bottom: 30px;
+
 
 }
