--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19101,3 +19101,6 @@ a.ltn__utilize-toggle.close {
   box-shadow: var(--ltn__box-shadow-1);
   transition: 0.3s;
 }
+.redcoloringgg44{
+  color: red;
+}
