--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13729,6 +13729,22 @@ blockquote::before {
   text-align: center;
   border-radius: 5px;
 }
+
+.ltn__banner-style-shop-page-images {
+  position: relative;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 5px;
+}
 .ltn__banner-style-4 .ltn__banner-info {
   position: relative;
   padding: 30px 30px;
