--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4793,7 +4793,6 @@ label{
   font-size:17px;
 
 }
-{/*  padding-right: 78px;   padding removed from label class*/}
 
 .label_2{
     font-family: "League Spartan";
@@ -13729,6 +13728,15 @@ blockquote::before {
   text-align: center;
   border-radius: 5px;
 }
+.row-bread {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col-bread {
+  flex-basis: 20%;
+  max-width: 20%;
+}
 
 .ltn__banner-style-shop-page-images {
   position: relative;
@@ -17924,9 +17932,10 @@ body {
   padding-bottom: 0px;
 }
 
-.footer-widget {
-  margin-bottom: 60px;
+
+.footer-widget-breadcrum {
 }
+
 
 .footer-logo {
   position: relative;
