--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19268,6 +19268,9 @@ a.ltn__utilize-toggle.close {
 .price_div{
   width: 35%;
 }
+.price_div69{
+  width: 99%;
+}
 .carouselImages{
   min-height: 300px;
 }
